# quip

./: .gitignore  .pre-commit-config.yaml  AUTOSTART.md  CLAUDE.md  DEVELOPMENT.md  IDEAS.md  LICENSE  README.md  RELEASE.md  VOICE_RECORDING_PLAN.md  install.ps1  install.sh  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
desktop/: .coveragerc  .pre-commit-config.yaml  README.md  config.py  config_watcher.py  daemon.py  llm.py  main.py  pyproject.toml  pytest.ini  transcription.py  updater.py  voice_recorder.py
desktop/core/: __init__.py  app.py  note_manager.py
desktop/curator/: __init__.py  curator.py
desktop/scripts/: validate_transcription.py
desktop/tests/: __init__.py  conftest.py  test_app.py  test_curator.py  test_llm.py  test_note_manager.py  test_overlays.py  test_text_widget.py  test_voice_handler.py  test_window_manager.py  test_windows_port.py
desktop/ui/: fonts.py  overlays.py  text_widget.py  window_manager.py
desktop/voice/: __init__.py  voice_handler.py
mobile/: README.md
scripts/: release.sh
server/: README.md
shared/: README.md
web/: README.md
