[project]
name = "quip"
version = "0.1.0"
description = "A minimal quick-note GUI application"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
quip = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]