[project]
name = "quip"
version = "0.6.3"
description = "A minimal quick-note GUI application"
requires-python = ">=3.8"
dependencies = [
    "watchdog>=3.0.0",
    "pynput>=1.7.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "tomli-w>=1.0.0",
    "sounddevice>=0.4.0",
    "vosk>=0.3.45",
    "numpy>=1.20.0,<2.0.0",
]

[dependency-groups]
dev = [
    "ruff",
    "pre-commit",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]

[project.scripts]
quip = "main:main"
quip-daemon = "daemon:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]